--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>HTML and CSS Website</p>
       </div>
       <div class="third-width">
-        <a href="https://care-hub.herokuapp.com/"><img src="img/rogue-pickings.png" width="275"
+        <a href="/rogue-pickings/"><img src="img/rogue-pickings.png" width="275"
             alt="Screenshot of Rogue Pickings, a food truck website"></a>
         <h3>Rogue Pickings</h3>
         <p>HTML and CSS Website from Photoshop design comp</p>
